--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
   "name": "sitepack",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "description": "Static website engine based on webpack",
   "author": "James K Nelson <james@jamesknelson.com>",
   "license": "MIT",
   "bin": {
     "sitepack": "./bin/sitepack.js"
   },
+  "scripts": {
+    "compile:watch": "babel --watch --source-maps=inline -d lib/ source/",
+    "build": "cross-env BABEL_ENV=commonjs babel source --out-dir lib"
+  },
   "dependencies": {
     "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-transform-class-properties": "6.16.0",
-    "babel-plugin-transform-object-rest-spread": "6.19.0",
-    "babel-preset-latest": "6.16.0",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-class-properties": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.22.0",
+    "babel-preset-latest": "^6.22.0",
     "babel-register": "^6.22.0",
     "bundle-loader": "0.5.4",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
+    "cross-env": "^3.1.4",
     "css-loader": "0.23.1",
     "es6-templates": "^0.2.3",
     "fastparse": "^1.1.1",
     "file-loader": "^0.9.0",
     "front-matter": "^2.1.1",
     "history": "^4.5.0",
-    "html-webpack-plugin": "^2.22.0",
+    "html-webpack-plugin": "^2.26.0",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "loader-utils": "^0.2.16",
