--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "sitepack",
-  "version": "0.0.5",
+  "version": "0.0.10",
   "description": "Static website engine based on webpack",
   "author": "James K Nelson <james@jamesknelson.com>",
   "license": "MIT",
   "bin": {
     "sitepack": "./bin/sitepack.js"
   },
+  "main": "lib/index.js",
   "scripts": {
-    "compile:watch": "babel --watch --source-maps=inline -d lib/ source/",
-    "build": "cross-env BABEL_ENV=commonjs babel source --out-dir lib"
+    "clean": "rimraf lib",
+    "build:watch": "cross-env BABEL_ENV=commonjs babel --watch --source-maps=inline -d lib/ source/",
+    "build": "cross-env BABEL_ENV=commonjs babel source --out-dir lib",
+    "prepublish": "npm run clean && npm run build"
+  },
+  "peerDependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "dependencies": {
     "babel-core": "^6.22.1",
@@ -24,21 +31,30 @@
     "cross-env": "^3.1.4",
     "css-loader": "0.23.1",
     "es6-templates": "^0.2.3",
+    "extract-text-webpack-plugin": "^1.0.1",
     "fastparse": "^1.1.1",
     "file-loader": "^0.9.0",
+    "finalhandler": "^0.5.1",
     "front-matter": "^2.1.1",
+    "fs-extra": "^2.0.0",
     "history": "^4.5.0",
     "html-webpack-plugin": "^2.26.0",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "loader-utils": "^0.2.16",
+    "lodash": "^4.17.4",
     "markdown-it": "^7.0.0",
     "markdown-it-anchor": "^2.5.1",
+    "memory-fs": "^0.4.1",
+    "null-loader": "^0.1.1",
     "object-assign": "^4.1.1",
     "prismjs-loader": "0.0.3",
     "promise": "^7.1.1",
     "react-dev-utils": "^0.4.2",
     "react-junctions": "^0.3.2",
+    "require-from-string": "^1.2.1",
+    "rimraf": "^2.5.4",
+    "serve-static": "^1.11.2",
     "style-loader": "0.13.1",
     "sw-precache": "^4.2.2",
     "url-loader": "^0.5.7",
