--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["latest"],
+  "presets": ["react", "latest"],
   "plugins": ["transform-class-properties", "transform-object-rest-spread"]
 }
