--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "less-loader": "^2.2.3",
     "loader-utils": "^0.2.16",
     "lodash": "^4.17.4",
-    "markdown-it": "^7.0.0",
     "markdown-it-anchor": "^2.5.1",
+    "mdx-it": "^0.1.4",
     "memory-fs": "^0.4.1",
     "null-loader": "^0.1.1",
     "object-assign": "^4.1.1",
@@ -59,5 +59,8 @@
     "webpack": "1.13.1",
     "webpack-dev-server": "1.14.1",
     "whatwg-fetch": "^2.0.2"
+  },
+  "devDependencies": {
+    "babel-preset-react": "^6.22.0"
   }
 }
