--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sitepack",
-  "version": "0.3.0",
+  "version": "1.0.0-beta.1",
   "description": "Static website engine based on webpack",
   "author": "James K Nelson <james@jamesknelson.com>",
   "license": "MIT",
@@ -14,53 +14,40 @@
     "build": "cross-env BABEL_ENV=commonjs babel source --out-dir lib",
     "prepublish": "npm run clean && npm run build"
   },
-  "peerDependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
-  },
   "dependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-class-properties": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
     "babel-register": "^6.22.0",
-    "bundle-loader": "0.5.4",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
-    "cross-env": "^3.1.4",
-    "css-loader": "0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.9.0",
     "finalhandler": "^0.5.1",
-    "front-matter": "^2.1.1",
     "fs-extra": "^2.0.0",
     "history": "^4.5.0",
-    "html-webpack-plugin": "^2.26.0",
-    "less": "^2.7.2",
-    "less-loader": "^2.2.3",
-    "loader-utils": "^0.2.16",
+    "html-webpack-plugin": "^2.28.0",
+    "loader-utils": "^1.0.2",
     "lodash": "^4.17.4",
-    "markdown-it-anchor": "^2.5.1",
-    "mdx-it": "^0.1.4",
     "memory-fs": "^0.4.1",
     "null-loader": "^0.1.1",
     "object-assign": "^4.1.1",
-    "prismjs-loader": "0.0.3",
     "promise": "^7.1.1",
     "react-dev-utils": "^0.4.2",
-    "react-junctions": "^0.3.2",
     "require-from-string": "^1.2.1",
-    "rimraf": "^2.5.4",
     "serve-static": "^1.11.2",
-    "style-loader": "0.13.1",
-    "sw-precache": "^4.2.2",
+    "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "1.13.1",
-    "webpack-dev-server": "1.14.1",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1",
     "whatwg-fetch": "^2.0.2"
   },
   "devDependencies": {
-    "babel-preset-react": "^6.22.0"
+    "cross-env": "^3.1.4",
+    "rimraf": "^2.5.4"
   }
 }
