--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sitepack",
-  "version": "1.0.0-beta.5",
+  "version": "1.0.0-beta.10",
   "description": "Static website engine based on webpack",
   "author": "James K Nelson <james@jamesknelson.com>",
   "license": "MIT",
@@ -38,6 +38,7 @@
     "object-assign": "^4.1.1",
     "promise": "^7.1.1",
     "react-dev-utils": "^0.4.2",
+    "regenerator-runtime": "^0.10.3",
     "require-from-string": "^1.2.1",
     "serve-static": "^1.11.2",
     "style-loader": "^0.13.1",
