--- a/package.json
+++ b/package.json
@@ -1,54 +1,30 @@
 {
-  "name": "sitepack",
-  "version": "1.0.0-beta.20",
-  "description": "Static website engine based on webpack",
-  "author": "James K Nelson <james@jamesknelson.com>",
-  "license": "MIT",
-  "bin": {
-    "sitepack": "./bin/sitepack.js"
-  },
-  "main": "lib/index.js",
-  "scripts": {
-    "clean": "rimraf lib",
-    "build:watch": "cross-env BABEL_ENV=commonjs babel --watch --source-maps=inline -d lib/ source/",
-    "build": "cross-env BABEL_ENV=commonjs babel source --out-dir lib",
-    "prepublish": "npm run clean && npm run build"
-  },
-  "dependencies": {
-    "babel-core": "^6.24.0",
-    "babel-loader": "^7.1.0",
-    "babel-plugin-transform-class-properties": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.22.0",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "babel-register": "^6.24.0",
-    "chalk": "^1.1.3",
-    "commander": "^2.9.0",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.9.0",
-    "finalhandler": "^0.5.1",
-    "fs-extra": "^2.0.0",
-    "history": "^4.5.0",
-    "html-webpack-plugin": "^2.30.1",
-    "loader-utils": "^1.1.0",
-    "lodash": "^4.17.4",
-    "memory-fs": "^0.4.1",
-    "null-loader": "^0.1.1",
-    "object-assign": "^4.1.1",
-    "promise": "^7.1.1",
-    "react-dev-utils": "^4.0.1",
-    "regenerator-runtime": "^0.10.3",
-    "require-from-string": "^1.2.1",
-    "serve-static": "^1.11.2",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.8.2",
-    "whatwg-fetch": "^2.0.2"
-  },
+  "private": true,
   "devDependencies": {
-    "cross-env": "^3.1.4",
-    "rimraf": "^2.5.4"
-  }
+    "babel-core": "^6.24.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "cross-env": "^5.0.5",
+    "lerna": "^2.1.2",
+    "rimraf": "^2.6.2"
+  },
+  "scripts": {
+    "site:start": "sitepack start -c site/sitepack.config.js",
+    "site:clean": "rimraf site/build",
+    "site:build": " cross-env NODE_ENV=production sitepack build -c site/sitepack.config.js -o site/build",
+    "site:build:development": " cross-env NODE_ENV=development sitepack build -c site/sitepack.config.js -o site/build",
+    "site:publish": "npm run site:clean && npm run site:build && cp ./CNAME site/build && cd site/build && git init && git commit --allow-empty -m 'update docs' && git checkout -b gh-pages && touch .nojekyll && git add . && git commit -am 'update docs' && git push git@github.com:jamesknelson/junctions gh-pages --force",
+    "site:view": "sitepack view -d site/build",
+    "build": "lerna run --parallel build",
+    "build:watch": "lerna run --parallel build:watch"
+  },
+  "workspaces": [
+    "packages/*",
+    "site"
+  ]
 }
