--- a/packages/sitepack-mdx-page-loader/package.json
+++ b/packages/sitepack-mdx-page-loader/package.json
@@ -1,13 +1,13 @@
 {
   "name": "sitepack-mdx-page-loader",
-  "version": "1.0.0-beta.20",
+  "version": "0.1.0-beta.21",
   "description": "Markdown/MDX page loader for sitepack",
   "author": "James K Nelson <james@jamesknelson.com>",
   "license": "MIT",
   "main": "mdx-page-loader.js",
   "peerDependencies": {
-    "sitepack": "^1.0.0-beta.20",
-    "mdxc": "^1.0.0-beta.4"
+    "mdxc": "^1.0.0-beta.4",
+    "sitepack": "^1.0.0-beta.20"
   },
   "dependencies": {
     "front-matter": "^2.1.2",
