--- a/packages/sitepack/package.json
+++ b/packages/sitepack/package.json
@@ -41,6 +41,7 @@
     "regenerator-runtime": "^0.10.3",
     "require-from-string": "^1.2.1",
     "serve-static": "^1.11.2",
+    "source-map-loader": "^0.2.2",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.6.0",
