--- a/site/package.json
+++ b/site/package.json
@@ -2,7 +2,7 @@
   "author": "James K Nelson <james@jamesknelson.com>",
   "name": "site",
   "private": "true",
-  "version": "0.1.0-beta.22",
+  "version": "0.1.0",
   "description": "armo site",
   "license": "UNLICENSED",
   "devDependencies": {
@@ -19,7 +19,7 @@
     "react": "^16.0.0",
     "react-cx": "^0.1.4",
     "react-dom": "^16.0.0",
-    "sitepack": "^0.1.0-beta.22",
+    "sitepack": "^0.1.0",
     "sitepack-mdx-page-loader": "^0.1.0-beta.22",
     "sitepack-react": "^0.1.0-beta.21"
   }
