--- a/packages/sitepack/package.json
+++ b/packages/sitepack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sitepack",
-  "version": "0.1.0",
+  "version": "1.0.0-beta.24",
   "description": "Static website engine based on webpack",
   "author": "James K Nelson <james@jamesknelson.com>",
   "license": "MIT",
