--- a/packages/sitepack-react/package.json
+++ b/packages/sitepack-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sitepack-react",
-  "version": "1.0.0-beta.24",
+  "version": "1.0.0",
   "description": "React components for working with Sitepack",
   "author": "James K Nelson <james@jamesknelson.com>",
   "license": "MIT",
