--- a/packages/sitepack-mdx-page-loader/package.json
+++ b/packages/sitepack-mdx-page-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sitepack-mdx-page-loader",
-  "version": "1.0.0-beta.24",
+  "version": "1.0.0",
   "description": "Markdown/MDX page loader for sitepack",
   "author": "James K Nelson <james@jamesknelson.com>",
   "license": "MIT",
